2012-06-25  Yong Li  <yoli@rim.com>

        [BlackBerry] Add JSC statistics into about:memory
        https://bugs.webkit.org/show_bug.cgi?id=89779

        Reviewed by Rob Buis.

        Turn on WTF_USE_EXPORT_MACROS for BlackBerry port.
        This will make macros like JS_EXPORT_PRIVATE work without
        extra porting.

        * wtf/Platform.h:

2012-06-25  Adam Barth  <abarth@webkit.org>

        Use InterpolationLow on chromium-android
        https://bugs.webkit.org/show_bug.cgi?id=89849

        Reviewed by Daniel Bates.

        Introduce a USE macro to control image interpolation quality.

        * wtf/Platform.h:

2012-06-25  Kent Tamura  <tkent@chromium.org>

        Change the serialization format of form control state to make the code simple
        https://bugs.webkit.org/show_bug.cgi?id=89847

        Reviewed by Hajime Morita.

        * wtf/text/StringBuilder.h:
        (WTF::StringBuilder::appendEscaped): Added. This function adds the
        escaped form of the input string. e.g. if stiring="foo,bar" escape='\'
        special=',', the appended string is foo\,bar.

2012-06-24  Adam Barth  <abarth@webkit.org>

        Remove USE(CHROMIUM_NET) because it is unused
        https://bugs.webkit.org/show_bug.cgi?id=89850

        Reviewed by Eric Seidel.

        I didn't see any mentions of CHROMIUM_NET when I grepped the Source
        directory. Also, this USE macro isn't defined on OS(DARWIN) or
        OS(ANDROID), which seems a bit odd given that Chromium uses the same
        network stack on all platforms.

        * wtf/Platform.h:

2012-06-22  Peter Beverloo  <peter@chromium.org>

        [Chromium] Disable c++0x compatibility warnings in JavaScriptCore.gyp when building for Android
        https://bugs.webkit.org/show_bug.cgi?id=88853

        Reviewed by Steve Block.

        The Android exclusions were necessary to fix a gyp generation error, as
        the gcc_version variable wasn't being defined for Android. Remove these